<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#795548"
            android:theme="@style/ActionBarTheme" />

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_below="@+id/toolbar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true">


        <android.support.constraint.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                >

            <TextView
                    android:text="@string/patchnow"
                    android:layout_width="395dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:gravity="top|center_vertical"
                    tools:layout_editor_absoluteX="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:paddingLeft="10dp"/>

            <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ltt_patch"
                    card_view:cardCornerRadius="4dp"
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:onClick="onCardClick"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/textView7"
                    card_view:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="16dp"
                    card_view:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="16dp"
                    android:focusable="true">

                <android.support.constraint.ConstraintLayout
                        android:orientation="vertical"
                        android:layout_width="364dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:id="@+id/linearLayout">

                    <ImageView
                            android:layout_width="75dp"
                            app:srcCompat="@drawable/layton_uf_logo"
                            android:id="@+id/imageView2"
                            android:layout_height="74dp"
                            tools:layout_editor_absoluteY="3dp"
                            card_view:layout_constraintEnd_toStartOf="@+id/textView4"
                            android:layout_marginEnd="12dp"
                            android:layout_marginRight="12dp"
                            card_view:layout_constraintStart_toStartOf="parent"
                            android:layout_marginLeft="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginStart="8dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/patch_ltt_now"
                            android:id="@+id/textView4"
                            android:textAlignment="center"
                            android:gravity="left|center_horizontal"
                            android:layout_marginBottom="8dp"
                            card_view:layout_constraintBottom_toTopOf="@+id/textView5"
                            card_view:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"
                            card_view:layout_constraintVertical_bias="1.0"
                            card_view:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="128dp"
                            />

                    <TextView
                            android:layout_width="278dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/ltt_patch_description"
                            android:id="@+id/textView5"
                            android:gravity="left|center_horizontal"
                            tools:layout_editor_absoluteY="42dp"
                            card_view:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline"
                    app:layout_constraintGuide_begin="20dp"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteY="20dp"
                    tools:layout_editor_absoluteX="0dp"/>

            <android.support.v7.widget.CardView
                    android:layout_width="373dp"
                    android:layout_height="84dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ltt_patch"
                    android:id="@+id/ls_patch"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="onCardClick">

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:layout_width="76dp"
                            android:layout_height="73dp"
                            app:srcCompat="@drawable/layton_ls_logo"
                            android:id="@+id/imageView5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="8dp"
                            app:layout_constraintVertical_bias="0.4"/>

                    <TextView
                            android:text="@string/patch_ls_now"
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:id="@+id/textView6"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toEndOf="@+id/imageView5"
                            android:layout_marginStart="8dp"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="4dp"/>

                    <TextView
                            android:text="@string/ls_patch_description"
                            android:layout_width="279dp"
                            android:layout_height="36dp"
                            android:id="@+id/textView13"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/textView6"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView5"
                            android:layout_marginStart="8dp"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintVertical_bias="1.0"/>
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <TextView
                    android:text="@string/bloginfoheader"
                    android:layout_width="395dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:paddingLeft="10dp"
                    app:layout_constraintHorizontal_bias="0.454"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ls_patch"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/go_blog"/>

            <android.support.v7.widget.CardView
                    android:id="@+id/info"
                    app:cardCornerRadius="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCardClick"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toEndOf="@+id/go_blog"
                    app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:weightSum="1">

                    <ImageView
                            app:srcCompat="@drawable/information_circle"
                            android:id="@+id/imageView4"
                            android:layout_height="140dp"
                            android:layout_width="140dp"
                            android:layout_marginBottom="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/info"
                            android:id="@+id/textView11"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/info_desciption"
                            android:id="@+id/textView12"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:id="@+id/go_blog"
                    app:cardCornerRadius="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCardClick"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/info">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp">

                    <ImageView
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            app:srcCompat="@drawable/web_circle"
                            android:id="@+id/imageView3"
                            android:layout_marginBottom="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/go_blog"
                            android:id="@+id/textView8"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/go_blog_description"
                            android:id="@+id/textView9"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/guideline2"
                    app:layout_constraintGuide_begin="20dp"
                    android:orientation="horizontal"/>

            <android.support.constraint.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barrier"
                    app:barrierDirection="top"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</RelativeLayout>
